Fixed typos and spelling errors

--- a/documents/cluster/concepts.html
+++ b/documents/cluster/concepts.html
@@ -287,7 +287,7 @@ GitHub</a></li>
 <p>The following terms are listed in alphabetical order.</p>
 
 <h3>Bootstrap</h3>
-<p>Bootstraping is provisioning a node or cluster for the first time. Contiv distinguishes two types of bootstrap:</p>
+<p>Bootstrapping is provisioning a node or cluster for the first time. Contiv distinguishes two types of bootstrap:</p>
 
 <ul>
 <li><em>Node Bootstrap</em>: The process of installing the node image and booting the node for the first time.
@@ -324,7 +324,7 @@ Nodes may or may not all have the same capabilities.</p>
 </li>
 <li><a href="#node-configuration-management">Node configuration management</a>
 </li>
-<li>Clustering software components (swarm-agent and similar componenets)
+<li>Clustering software components (swarm-agent and similar components)
 </li>
 <li>Infrastructure software components (ovs, serf, consul, etcd, and so on)
 </li>
@@ -430,7 +430,7 @@ operator or dynamically based on service availability policy.
 <p><a name="bootstrap-1"></a></p>
 
 <h3>Bootstrap</h3>
-<p>Contiv provides node and cluster boostrapping.</p>
+<p>Contiv provides node and cluster bootstrapping.</p>
 
 <h4>Node</h4>
 <p>Contiv Cluster provides the following node bootstrapping capabilities:</p>
