--- a/documents/cluster/node-lifecycle.html
+++ b/documents/cluster/node-lifecycle.html
@@ -337,7 +337,7 @@ Specify these variables in one of two ways:</p>
 <p>The following command lists discovered nodes:</p>
 <pre class="highlight plaintext"><code>clusterctl nodes get
 </code></pre>
-<p>Fetch information about a single node with the following commnand: 
+<p>Fetch information about a single node with the following command: 
 <code>clusterctl node get &lt;node-name&gt;</code></p>
 <p>It might take a few minutes after provisioning for the node discovery to propagate. If the command does not show provisioned nodes, wait and try again later.</p>
 
@@ -383,7 +383,7 @@ Specify these variables in one of two ways:</p>
 </code></pre>
 
 <h4>Manage Multiple Nodes</h4>
-<p>Perform the worflow to commission, decommission, or upgrade all or a subset of nodes using <code>clusterctl nodes</code> subcommands. Refer the documentation of individual commands for details.</p>
+<p>Perform the workflow to commission, decommission, or upgrade all or a subset of nodes using <code>clusterctl nodes</code> subcommands. Refer the documentation of individual commands for details.</p>
 <pre class="highlight plaintext"><code>clusterctl nodes commission &lt;space separated node-name(s)&gt;
 clusterctl nodes decommission &lt;space separated node-name(s)&gt;
 clusterctl nodes maintain &lt;space separated node-name(s)&gt;
