--- a/documents/gettingStarted/cluster/vagrant.html
+++ b/documents/gettingStarted/cluster/vagrant.html
@@ -283,7 +283,7 @@ GitHub</a></li>
 <p>To quickly create a virtual environment using the Vagrant environment setup tool, do the following:</p>
 
 <h2>Prerequisites</h2>
-<p>Install the following packages on your machnine:</p>
+<p>Install the following packages on your machine:</p>
 
 <ul>
 <li>Vagrant 1.7.3 or later
@@ -317,7 +317,7 @@ CONTIV_NODES=3 make demo-cluster
 </code></pre>
 
 <h2>What to Do Next</h2>
-<p>See the <a href="/documents/cluster/node-lifecycle.html">Cluster</a> docuentation for information about managing the cluster lifecycle.</p>
+<p>See the <a href="/documents/cluster/node-lifecycle.html">Cluster</a> documentation for information about managing the cluster lifecycle.</p>
 
 
 			</div>
