--- a/documents/gettingStarted/networking/aci.html
+++ b/documents/gettingStarted/networking/aci.html
@@ -327,7 +327,7 @@ for example, <code>topology/pod-1/node-101,topology/pod-1/node-102</code>.</p>
 
 <ol>
 <li><p>Create a Key 
-Create a key and certicate. Add the certificate to APIC using the procedure described 
+Create a key and certificate. Add the certificate to APIC using the procedure described 
 <a href="http://www.cisco.com/c/en/us/td/docs/switches/datacenter/aci/apic/sw/kb/b_KB_Signature_Based_Transactions.pdf">here</a>.</p>
 </li>
 <li><p>Set the APIC_CERT_DN Environment Variable
