--- a/documents/gettingStarted/networking/bgp.html
+++ b/documents/gettingStarted/networking/bgp.html
@@ -280,13 +280,13 @@ GitHub</a></li>
 				
 	<h1>Installing Contiv in a BGP L3 Setup</h1>
 <p>This page describes how to configure the Contiv infrastructure in L3 native VLAN mode.</p>
-<p>The following figure shows a Contiv cluster with routing capabilites:</p>
+<p>The following figure shows a Contiv cluster with routing capabilities:</p>
 <p><img alt="bgp" src="/documents/gettingStarted/networking/bgp_arch-f61447e6.png"/></p>
 
 <h2>Prerequisites</h2>
 <p>Follow the <a href="/documents/gettingStarted/networking/install-swarm.html#Prerequisites">Prerequisites</a> and <a href="/documents/gettingStarted/networking/install-swarm.html#Download">Download</a>
 steps on the <a href="/documents/gettingStarted/networking/install-swarm.html">Swarm Cluster</a> installation page. 
-These steps install all of the required packages and binaries needed to start the Contiv infrastrure services.</p>
+These steps install all of the required packages and binaries needed to start the Contiv infrastructure services.</p>
 
 <h2>Step 1: Run the Installer Script</h2>
 <p>Use the following command to run the installer script:</p>
