--- a/documents/gettingStarted/networking/index.html
+++ b/documents/gettingStarted/networking/index.html
@@ -282,16 +282,16 @@ GitHub</a></li>
 <p>There are several ways to try out Contiv Network. All of these ways fall into two categories:</p>
 
 <ul>
-<li><a href="#UsingVagrant">Use our Vagrant scripts to set up a small-scale virtual environment on an single machine.</a>
+<li><a href="#UsingVagrant">Use our Vagrant scripts to set up a small-scale virtual environment on a single machine.</a>
 </li>
-<li><a href="#WithNetworkedServers">Install Contiv Network on two or more bare-metal or virtual servers.</a>
+<li><a href="#WithNetworkedServers">Install Contiv Network on two or more baremetal or virtual servers.</a>
 </li>
 </ul>
 <p><a name="UsingVagrant"/></p>
 
 <h2>On a Single Machine</h2>
 <p>You can use our Vagrant script to get up and running fast on a single Linux or OS X machine.
-Vagrant is a utility for quickly and consistently setting up virtual machines (VMs).</p>
+<a href="http://vagrantup.com">Vagrant</a> is a utility for quickly and consistently setting up virtual machines (VMs).</p>
 
 <ul>
 <li><a href="/documents/gettingStarted/networking/swarm.html">Try out Contiv Network with Docker Swarm</a>.
