--- a/documents/gettingStarted/networking/nomad.html
+++ b/documents/gettingStarted/networking/nomad.html
@@ -279,10 +279,10 @@ GitHub</a></li>
 			<div class="bs-docs-section">
 				
 	<h1>Contiv Network with Nomad</h1>
-<p>This page demostrates the simplicity of using Contiv as 
+<p>This page demonstrates the simplicity of using Contiv as 
 the networking and policy infrastructure for containers using Nomad to schedule 
 Docker containers.</p>
-<p>The steps here can be adapted to any Vagrant or bare-metal setups running Contiv components.</p>
+<p>The steps here can be adapted to any Vagrant or baremetal setups running Contiv components.</p>
 
 <h2>Prerequisites</h2>
 <p>Before you can install the virtual environment, you must have the following
@@ -299,7 +299,7 @@ software packages on your machine:</p>
 
 <h2>Step 1: Start the Virtual Environment</h2>
 <p>Use the following commands to clone the Contiv Network <a href="https://github.com/contiv/netplugin">workspace</a> 
-and start the Vagrant envaronment with Nomad installed.</p>
+and start the Vagrant environment with Nomad installed.</p>
 <pre class="highlight plaintext"><code>$ git clone https://github.com/contiv/netplugin
 $ cd netplugin; make nomad-docker
 $ vagrant ssh netplugin-node1
