--- a/documents/index.html
+++ b/documents/index.html
@@ -281,7 +281,7 @@ GitHub</a></li>
 	<h1>Contiv Documentation</h1>
 
 <h2>User Guides</h2>
-<p>Information about Contiv design, archtecture, and components, as well as getting-started
+<p>Information about Contiv design, architecture, and components, as well as getting-started
 guides.</p>
 
 <ul>
@@ -300,7 +300,7 @@ guides.</p>
 <ul>
 <li><a href="/documents/tutorials">Tutorials</a>
 </li>
-<li><a href="/documents/demos">Demostration Videos</a>
+<li><a href="/documents/demos">Demonstration Videos</a>
 </li>
 <li><a href="/documents/talks">Community Talks</a>
 </li>
