--- a/documents/networking/aci_ug.html
+++ b/documents/networking/aci_ug.html
@@ -346,7 +346,7 @@ netctl group create -t MixedTenant -e ToConsume -e ToProvide -p app2db net1 app
 
 <h4>Add rules to the policy</h4>
 <p>Specify policy between tiers by adding rules to the policy you created. You can add multiple rules to the same policy.</p>
-<p>For example, the follwing rule opens TCP port 6379 from <em>app</em> to <em>db</em>.</p>
+<p>For example, the following rule opens TCP port 6379 from <em>app</em> to <em>db</em>.</p>
 <pre class="highlight plaintext"><code>netctl policy rule-add -t MixedTenant -d in --protocol tcp --port 6379 --from-group app --action allow app2db 1
 </code></pre>
 
