--- a/documents/networking/index.html
+++ b/documents/networking/index.html
@@ -293,7 +293,7 @@ Mesos, and Nomad ecosystems.</p>
 read our self-guided hands-on <a href="/documents/tutorials/container-101.html">Tutorial</a>.</p>
 
 <h2>Learning Resources</h2>
-<p>Other learning resources on this site, designed to help you get up to speed on Contiv and container networkinginclude:</p>
+<p>Other learning resources on this site, designed to help you get up to speed on Contiv and container networking, include:</p>
 
 <ul>
 <li><a href="/documents/networking/features.html">Contiv Features</a>
