--- a/documents/samples/nomad.html
+++ b/documents/samples/nomad.html
@@ -279,11 +279,14 @@ GitHub</a></li>
 			<div class="bs-docs-section">
 				
 	<h1>Contiv with Nomad Example</h1>
-<p>The purpose of the document is to demostrate the simplicity of using Contiv as the networking and policy infrastructure for containers with Nomad for scheduling docker containers</p>
-<p>The steps could be adapted to any vagrant or bare-metal setups running contiv components. For the simplicity of the document we assume that 2 nodes are brought with necessary contiv components (netplugin , netmaster)</p>
-<p><a href="https://github.com/contiv/netplugin#step-1-clone-the-project-and-bringup-the-vms">Clone</a> the contiv netplugin <a href="https://github.com/contiv/netplugin">workspace</a> and bringup vagrant nodes</p>
+<p>This example demonstrates how to use Contiv as the networking and policy infrastructure for Docker containers using Nomad for scheduling.</p>
+<p>The steps can be adapted to any Vagrant or baremetal setups running Contiv components. For simplicity, we assume that two nodes have the necessary Contiv components (netplugin , netmaster) installed.</p>
 
-<h2>Step 0:</h2>
+<h2>Prerequisites</h2>
+<p><a href="https://github.com/contiv/netplugin#step-1-clone-the-project-and-bringup-the-vms">Clone</a> the Contiv <code>netplugin</code> <a href="https://github.com/contiv/netplugin">workspace</a> and start the Vagrant nodes.</p>
+
+<h2>Step 0: Connect to the Nodes</h2>
+<p>Log into the Vagrant nodes and check the interfaces:</p>
 <pre class="highlight plaintext"><code>$vagrant ssh netplugin-node1
 vagrant@netplugin-node1:/tmp$ ifconfig eth1
 eth1      Link encap:Ethernet  HWaddr 08:00:27:d5:98:b7  
@@ -307,7 +310,8 @@ eth1      Link encap:Ethernet  HWaddr 08:00:27:1f:1a:5b
           RX bytes:140892098 (140.8 MB)  TX bytes:104739491 (104.7 MB)
 </code></pre>
 
-<h2>Step 1: Install nomad on all the vagrant nodes</h2>
+<h2>Step : Install Nomad</h2>
+<p>Install Nomad on all the Vagrant nodes:</p>
 <pre class="highlight plaintext"><code>$ vagrant ssh netplugin-node1
 vagrant@netplugin-node1:cd /tmp/
 vagrant@netplugin-node1:curl -sSL https://releases.hashicorp.com/nomad/0.3.0/nomad_0.3.0_linux_amd64.zip -o nomad.zip
@@ -319,8 +323,8 @@ vagrant@netplugin-node1:sudo mkdir -p /etc/nomad.d
 vagrant@netplugin-node1:sudo chmod a+w /etc/nomad.d
 </code></pre>
 
-<h2>Step 2: Create client and server Config file to run nomad agents</h2>
-<p>Fill client and server configuration file for nomad client and server agents. In this demo nomad server and client agent are running on netplugin node1 and a client agent is running on netplugin node2.</p>
+<h2>Step 2: Create Config Files</h2>
+<p>Create client and server configuration files to run nomad agents. In this demo the Nomad server and client agent are running on <code>netplugin-node1</code> and a client agent is running on <code>netplugin-node2</code>.</p>
 <p><strong>client1.hcl</strong></p>
 <pre class="highlight plaintext"><code># Increase log verbosity
 log_level = "DEBUG"         
@@ -477,7 +481,8 @@ vagrant@netplugin-node1:nomad agent -config client1.hcl &amp;
 vagrant@netplugin-node2:nomad agent -config client2.hcl &amp;
 </code></pre>
 
-<h2>Step 3: Verify the node status to ensure the nodes are discovered and peered.</h2>
+<h2>Step 3: Verify Node Status</h2>
+<p>Ensure the nodes are discovered and peered:</p>
 <pre class="highlight plaintext"><code>vagrant@netplugin-node1:/tmp$ nomad node-status -address=http://192.168.2.10:4646
     2016/03/16 17:51:11 [DEBUG] http: Request /v1/nodes (101.494µs)
 ID        Datacenter  Name             Class  Drain  Status
@@ -485,8 +490,9 @@ ID        Datacenter  Name             Class  Drain  Status
 4bac61f9  dc1         netplugin-node1  foo    false  ready
 </code></pre>
 
-<h2>Step 4: Create a network and attach it to an endpoint group.</h2>
-<p>If endpoint group has to be attached to a network - create policies and attach rules to the same. . Refer to the <a href="http://contiv.github.io/docs/3_netplugin.html">contiv docs</a> on steps to create policies.</p>
+<h2>Step 4: Create a Network</h2>
+<p>Create a network and attach it to an endpoint group (EPG).</p>
+<p>Create policies for the EPG and attach rules to the policies. See the <a href="http://contiv.github.io/docs/3_netplugin.html">Contiv docs</a> on steps to create policies.</p>
 <pre class="highlight plaintext"><code> vagrant@netplugin-node1: netctl net create contiv-net -subnet="40.1.1.0/24"
 vagrant@netplugin-node1: netctl policy create prod_web
 vagrant@netplugin-node1: netctl policy rule-add prod_web 1 -direction=in -protocol=tcp -action=deny
@@ -496,10 +502,11 @@ vagrant@netplugin-node1: netctl group create contiv-net web -policy=prod_web
 
 </code></pre>
 
-<h2>Step 5: Now that infrastructure is setup . Create a job file and schedule tasks</h2>
+<h2>Step 5: Schedule Tasks</h2>
+<p>Now that infrastructure is set up, create a job file and schedule tasks:</p>
 <pre class="highlight plaintext"><code>nomad init
 </code></pre>
-<p>This would create an example.nomad file that we will use to deploy containers in a network. Change the docker driver config in the file to specify a network containers need to be attached to. If the network has a policy group attached to it then the format is epgname.network. If the container needs to be attached to a network without any policies set network_mode=network_name.</p>
+<p>Following is an example Nomad file that deploys containers in a network. Change the Docker driver config in the file to specify a network that containers must attach to. If the network has a policy group attached to it then the format is <code>epgname.network</code>. If the container must be attached to a network without any policies, set <code>network_mode=network_name</code>.</p>
 <p><strong>example.nomad</strong></p>
 <pre class="highlight plaintext"><code>              # Use Docker to run the task.
                         driver = "docker"
@@ -516,7 +523,8 @@ vagrant@netplugin-node1: netctl group create contiv-net web -policy=prod_web
 <pre class="highlight plaintext"><code>vagrant@netplugin-node1:nomad run -address=http://192.168.2.10:4646 example.nomad
 </code></pre>
 
-<h2>Step 6: Verify endpoints for containers are allocated ip address from the network created.</h2>
+<h2>Step 6: Verify Addresses</h2>
+<p>Verify that endpoints for containers are allocated IP addresses from the new network:</p>
 <pre class="highlight plaintext"><code>vagrant@netplugin-node2:~$ docker ps
 CONTAINER ID        IMAGE               COMMAND                  CREATED             STATUS              PORTS                                                  NAMES
 5d5522b9ae0a        redis:latest        "/entrypoint.sh redis"   28 seconds ago      Up 26 seconds       10.0.2.15:58847-&gt;6379/tcp, 10.0.2.15:58847-&gt;6379/udp   redis-5d46fa82-fcc4-53cc-cf08-059417217e59
