--- a/documents/tutorials/contiv-compose.html
+++ b/documents/tutorials/contiv-compose.html
@@ -454,7 +454,7 @@ example_redis.test.default [10.11.1.21] 6375 (?) : Connection timed out
 <pre class="highlight plaintext"><code>$ contiv-compose stop
 </code></pre>
 
-<h3>3. Specfying an Override Policy</h3>
+<h3>3. Specifying an Override Policy</h3>
 <p>You can override the default policy.</p>
 <p>1. Use a <em>policy label</em> to specify an override policy for a service tier.</p>
 <p>The following composition file has been modified to override the default policy:</p>
