--- a/documents/demos/index.html
+++ b/documents/demos/index.html
@@ -280,7 +280,7 @@ GitHub</a></li>
 				
 	<h1>Video Demonstrations</h1>
 
-<h2>Getting started</h2>
+<h2>Getting Started</h2>
 
 <h3>Getting started with Contiv Networking</h3>
 <iframe width="600" height="400" src="https://www.youtube.com/embed/KzansAxCBQE?list=PL2k86RlAekM_g6csRwSRQAWvln5SmgicN" frameborder="0" allowfullscreen>
