--- a/documents/gettingStarted/cluster/index.html
+++ b/documents/gettingStarted/cluster/index.html
@@ -283,7 +283,7 @@ GitHub</a></li>
 <ul>
 <li><a href="/documents/gettingStarted/cluster/vagrant.html">Use our Vagrant scripts to set up a virtual environment on a single machine</a>
 </li>
-<li><a href="/documents/gettingStarted/cluster/baremetal.html">Instal Contiv Cluster on two or more bare-metal or virtual servers</a>
+<li><a href="/documents/gettingStarted/cluster/baremetal.html">Install Contiv Cluster on two or more bare-metal or virtual servers</a>
 </li>
 </ul>
 
