--- a/documents/gettingStarted/index.html
+++ b/documents/gettingStarted/index.html
@@ -283,13 +283,13 @@ GitHub</a></li>
 or clustering tools.</p>
 
 <h2><a href="/documents/gettingStarted/networking">Networking</a></h2>
-<p>Set up a development environment or a cluster of servers using different clustering systems.</p>
+<p>Set up a development environment or a cluster of servers using different schedulers.</p>
 
 <h2><a href="/documents/gettingStarted/storage/storage.html">Storage</a></h2>
 <p>Get started with Contiv Storage.</p>
 
 <h2><a href="/documents/gettingStarted/cluster">Cluster</a></h2>
-<p>Try out contiv cluster in Vagrant environment.</p>
+<p>Try out Contiv Cluster in a <a href="http://vagrantup.com">Vagrant</a> environment.</p>
 
 
 			</div>
