--- a/documents/gettingStarted/networking/install-swarm.html
+++ b/documents/gettingStarted/networking/install-swarm.html
@@ -301,9 +301,9 @@ where</code><node_ip>` is a list of the IP addresses of all nodes in your cluste
 </li>
 <li>The setup scripts use the Python module <em>netaddr</em> and the Linux utility <em>bzip2</em>. If these are not installed on the machine where you are executing these steps, you must install them before proceeding. (You can use the following commands: <a name="yum_install_bzip2_pip_install_netaddr"/><a href="#yum_install_bzip2_pip_install_netaddr"><code>yum install bzip2; pip install netaddr</code></a>.)
 </li>
-<li>(Optional but recommeded): Enable passwordless SSH access from the installation server to all the other servers in the cluster. An example is <a href="http://www.linuxproblem.org/art_9.html">here</a>.
+<li>(Optional but recommended): Enable passwordless SSH access from the installation server to all the other servers in the cluster. An example is <a href="http://www.linuxproblem.org/art_9.html">here</a>.
 </li>
-<li>(Optional but recommeded): Enable passwordless sudo on all servers.  An example is
+<li>(Optional but recommended): Enable passwordless sudo on all servers.  An example is
 <a href="http://askubuntu.com/questions/192050/how-to-run-sudo-command-with-no-password">here</a>.
 </li>
 <li>Make a note of the IP addresses (or DNS names) of all the servers, and of the network
@@ -337,8 +337,21 @@ information for all server nodes in the setup.</p>
 <pre class="highlight plaintext"><code>    chmod +x net_demo_installer
     ./net_demo_installer
 </code></pre>
+<p>set the environment variable contiv_network_version if a different version of Contiv network is needed.</p>
+<pre class="highlight plaintext"><code>export contiv_network_version="v0.1-06-17-2016.08-42-14.UTC"
+</code></pre>
+<p>contiv network version can be obtained from: <a href="https://github.com/contiv/netplugin/releases">https://github.com/contiv/netplugin/releases</a></p>
+<p>&quot;aci_gw_image&quot; specifies the docker image used for the aci-gw. This defaults to &quot;contiv/aci-gw:latest&quot;.</p>
+<p>If your setup requires a different image, just set this &quot;aci_gw_image&quot; environment variable to the &quot;image-name:version&quot;.</p>
+<p>e.g:</p>
+<pre class="highlight plaintext"><code>export aci_gw_image="contiv/aci-gw:v2"
+</code></pre>
+<p>Will fetch container aci-gw of contiv user from docker hub registry with v2 tag.</p>
+<p>Run net_demo_installer script.</p>
+<pre class="highlight plaintext"><code>./net_demo_installer
+</code></pre>
 <p><em>Note</em>: To restart the services already deployed, run the installer with -r option. This ensures that the services are restarted in a clean state.</p>
-<pre class="highlight plaintext"><code>            ./net_demo_installer -r
+<pre class="highlight plaintext"><code>./net_demo_installer -r
 </code></pre>
 
 <ul>
