--- a/documents/gettingStarted/networking/mesos.html
+++ b/documents/gettingStarted/networking/mesos.html
@@ -279,7 +279,7 @@ GitHub</a></li>
 			<div class="bs-docs-section">
 				
 	<h1>Contiv Network with Mesos and Marathon</h1>
-<p>Contiv Network supports Docker containerizer with Mesos and Marathon. 
+<p>Contiv Network supports Docker containers with Mesos and Marathon. 
 This page explains how to get started using Contiv Network with Mesos and Marathon.</p>
 
 <h2>Prerequisites</h2>
