--- a/documents/networking/concepts.html
+++ b/documents/networking/concepts.html
@@ -282,7 +282,7 @@ GitHub</a></li>
 <p>Using container networking with Contiv is as easy as creating networks
 and assigning containers to the networks. Contiv&#39;s real power, however, is the ability to 
 apply policies that govern the security, bandwidth, priority, and other parameters for container
-applications. Following are some concepts and terminoilogy required to understand
+applications. Following are some concepts and terminology required to understand
 Contiv&#39;s policy framework.</p>
 
 <h2>Groups</h2>
@@ -298,7 +298,7 @@ groups belong to one network or an IP subnet.</p>
 
 <h2>Policies</h2>
 <p>A <em>policy</em> describes an operational behavior on a <em>group</em> of containers. The operational
-behavior can be enforcement, allocation, prioritation, traffic redirection,
+behavior can be enforcement, allocation, prioritization, traffic redirection,
 stats collection, or other action on the group on which the policy is applied. For
 example, an inbound security policy on a database tier can specify the allowed ports
 on the containers belonging to the group.</p>
@@ -323,7 +323,7 @@ or clients to communicate with it.</p>
 <p>Contiv allows you to define two types of networks: An <em>application network</em> and
 an <em>infrastructure network</em>. An application network is used by container workloads,
 whereas the purpose of an <em>infrastructure network</em> is to create a virtual network
-in the host namespace. For example, infrastructure networkws are used by the virtual 
+in the host namespace. For example, infrastructure networks are used by the virtual 
 layer of host-resident infrastructure services such as monitoring, storage, or cluster stores.</p>
 <p>Network encapsulation <em>type</em> determines if a network is a <em>routed</em> network or a <em>bridged</em>
 network. A routed network is useful in <em>overlay</em> topology and <em>L3-routed BGP</em> topology,
@@ -332,7 +332,7 @@ while a <em>bridged</em> network is useful in connecting to a <em>layer2 VLAN</e
 <h2>Tenant</h2>
 <p><em>Tenants</em> provides namespace isolation for networks. A tenant can have many <em>networks</em>,
 each with its own subnet address, among other information. A user can create
-networks with arbtrary subnet addresses within a tenant namespace, possibly reusing
+networks with arbitrary subnet addresses within a tenant namespace, possibly reusing
 subnet IP addresses in other tenants. This provides complete freedom to a tenant
 user to specify the network names and their subnets within a tenant.</p>
 <p><em>Note</em>: The following two paragraphs are intended for more advanced network users.</p>
@@ -341,7 +341,7 @@ Depending on the mode of external connectivity (layer2, layer3, or
 Cisco ACI), the Contiv forwarding layer communicates the <em>tenant</em> to the external network
 using a <em>VLAN</em> or <em>VXLAN</em> ID. The Contiv routing plane (like BGP) is
 used to communicate the VRF-ID to rest of the network. See the documentation
-on layer3 BGP network configuraiton to learn more about configuration and usage.</p>
+on layer3 BGP network configuration to learn more about configuration and usage.</p>
 <p>Note that for <em>overlay</em> networks, the need to communicate the tenant to the external network
 is not applicable.</p>
 
