--- a/documents/samples/mcast.html
+++ b/documents/samples/mcast.html
@@ -278,46 +278,39 @@ GitHub</a></li>
 		<div id="main-content" class="col-sm-9 col-md-9 col-xs-12" role="main">
 			<div class="bs-docs-section">
 				
-	<h2>Multicast application demo</h2>
-<p>The purpose of the document is to illustrate the experiment done to validate
-multicast in a contiv network.</p>
+	<h1>Multicast Application Examples</h1>
+<p>This page illustrates how to validate multicast in a Contiv network.</p>
 
-<h3>Steps to run sender and receiver multicast application between containers</h3>
-<p>For this experiement we will run 2 containers , one on each VM. We will create a vlan network
-and run a sender and receiver multicast application. For the purpose of this demo we will be using
-multicast application from <a href="https://github.com/leslie-wang/py-multicast-example">https://github.com/leslie-wang/py-multicast-example</a></p>
+<h2>Multicast Between Containers</h2>
+<p>In this demo you run two containers, one on each VM. You create a VLAN network
+and run a sender and a receiver multicast application. The demo uses a
+multicast application from <code>https://github.com/leslie-wang/py-multicast-example</code>.</p>
 
-<h4>Step 1: Pull the contiv netplugin workspace from github</h4>
+<h3>Step 1: Download the Example</h3>
+<p>Pull the Contiv Network workspace from GitHub:</p>
 <pre class="highlight plaintext"><code>$ git clone https://github.com/contiv/netplugin
 $ cd netplugin
 </code></pre>
 
-<h4>Step 2: Create demo VMs</h4>
-
-<ul>
-<li>Start vms
-</li>
-<li>Create multicast enabled network
-</li>
-</ul>
+<h3>Step 2: Create Demo VMs and Network</h3>
+<p>The following commands start the VMs, log in to Node 1, and create a multicast-enabled network:</p>
 <pre class="highlight plaintext"><code>$ make demo
 $ vagrant ssh netplugin-node1
 $ netctl net create contiv-net --encap=vlan --subnet=20.1.1.0/24 --gateway=20.1.1.254 --pkt-tag=1010
 </code></pre>
 
-<h4>Step 3: Run a docker container in the network created and start multicast sender application.</h4>
+<h3>Step 3: Start the Sender</h3>
+<p>The following commands run a Docker container in the network and start a multicast sender application:</p>
 <pre class="highlight plaintext"><code>$ docker pull qiwang/centos7-mcast
 $ docker run -it --name=msender --net=contiv-net qiwang/centos7-mcast /bin/bash
 root@9f4e7fd418c5:/# cd /root
 root@9f4e7fd418c5:/# ./mcast.py -s -i eth0
 </code></pre>
 
-<h4>Step 4: Login to netplugin-node2</h4>
-<pre class="highlight plaintext"><code>vagrant ssh netplugin-node2
-</code></pre>
-
-<h4>Step 5: Run a docker container in the network created and launch the multicast receiver</h4>
-<pre class="highlight plaintext"><code>$ docker pull qiwang/centos7-mcast
+<h3>Step 4: Run the Receiver</h3>
+<p>The following commands log in to Node 2, start a Docker container in the network, and launch the multicast receiver:</p>
+<pre class="highlight plaintext"><code>$ vagrant ssh netplugin-node2
+$ docker pull qiwang/centos7-mcast
 $ docker run -it --name=mreceiver --net=contiv-net qiwang/centos7-mcast /bin/bash
 root@564f7f4424c1:/# cd /root
 root@564f7f4424c1:/# ./mcast.py -i eth0
@@ -326,39 +319,34 @@ root@564f7f4424c1:/# ./mcast.py -i eth0
 ('20.1.1.3', 35624)  '1453881423.977554'
 ('20.1.1.3', 35624)  '1453881424.978941'
 </code></pre>
-<p>where 20.1.1.3 is the IP assigned to container msender.</p>
+<p>(In the output from the receiver, <code>20.1.1.3</code> is the IP of the <code>msender</code> container.)</p>
 
-<h3>Steps to run sender and receiver multicast application between container and host VM</h3>
+<h2>Multicast between a Container and a VM</h2>
+<p>In this demo you run a sender and a receiver multicast application on a host VM and a container respectively.</p>
 
-<h4>Step 1: Create demo VMs</h4>
-
-<ul>
-<li>Start vms
-</li>
-<li>Create multicast enabled network
-</li>
-</ul>
+<h3>Step 1: Create the VMs</h3>
+<p>The following commands start the VMs, log in to Node 1, and create a multicast-enabled network:</p>
 <pre class="highlight plaintext"><code>$ make demo
 $ vagrant ssh netplugin-node1
 $ netctl net create contiv-net --encap=vlan --subnet=20.1.1.0/24 --gateway=20.1.1.254 --pkt-tag=1010
 </code></pre>
 
-<h4>Step 2: Create a port on the OVS with the network tag used for contiv-net</h4>
+<h3>Step 2: Create a Port</h3>
+<p>The following commands create a port on the OVS using the network tag of the new network:</p>
 <pre class="highlight plaintext"><code>$ sudo ovs-vsctl add-port contivVlanBridge inb01 -- set interface inb01 type=internal
 $ sudo ovs-vsctl set port inb01 tag=1010
 $ sudo ifconfig inb01 30.1.1.8/24
 </code></pre>
 
-<h4>Step 3: Launch a multicast sender application</h4>
+<h3>Step 3: Start the Sender</h3>
+<p>The following command starts a multicast sender application:</p>
 <pre class="highlight plaintext"><code>$ ./mcast.py -s -i inb01
 </code></pre>
 
-<h4>Step 4: Login to netplugin-node2</h4>
+<h3>Step 4: Run the Receiver</h3>
+<p>The following commands log in to Node 2, start a docker container in the new network, and launch a container-based multicast receiver:</p>
 <pre class="highlight plaintext"><code>$ vagrant ssh netplugin-node2
-</code></pre>
-
-<h4>Step 5: Run a docker container in the network created and launch multicast receiver.</h4>
-<pre class="highlight plaintext"><code>$ docker pull qiwang/centos7-mcast
+$ docker pull qiwang/centos7-mcast
 $ docker run -it --name=mreceiver --net=contiv-net qiwang/centos7-mcast /bin/bash
 root@426b8cdbf5f8:/# cd /root
 root@426b8cdbf5f8:/# ./mcast.py -i eth0
