--- a/documents/storage/index.html
+++ b/documents/storage/index.html
@@ -292,9 +292,9 @@ to take advantage of their storage.</p>
 </li>
 <li><a href="/documents/storage/configuration.html">Configuration</a>
 </li>
-<li><a href="/documents/storage/containers.html">Creating a container with a volume</a>
+<li><a href="/documents/storage/containers.html">Creating a Container with a Volume</a>
 </li>
-<li><a href="/documents/storage/volcli.html">Volcli Reference</a>
+<li><a href="/documents/storage/volcli.html">Contiv Storage CLI Reference</a>
 </li>
 </ul>
 
